# mate-calc

./: .build.yml  .gitignore  .travis.yml  AUTHORS  CNAME  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  index.html  makepot  mate-calc.pot  meson-postinstall.sh  meson.build  update-authors.pl
.tx/: config
2021-01-30-204922-3339-1@5da40bf82fd0_summary/: index.html  report-106742.html  report-255fec.html  report-377bfb.html  report-4c51cd.html  report-7d3ffa.html  report-93f48f.html  report-e2b942.html  report-e76ce7.html  report-e84464.html
2021-01-30-205039-9566-cppcheck@5da40bf82fd0_summary/: 11.html  5.html  index.html
2021-02-02-095622-3319-1@0f12e62077ee_factor/: index.html  report-35933e.html  report-3def2f.html  report-535aa4.html  report-597aff.html  report-59b3e3.html  report-5f0cea.html  report-7ecb56.html  report-825638.html  report-f3bb2f.html
2021-02-02-095740-4210-cppcheck@0f12e62077ee_factor/: 3.html  5.html
2021-02-03-074116-3327-1@3f70c0ecafd4_master/: index.html  report-00f407.html  report-10d2f4.html  report-4be2c6.html  report-56858c.html  report-914f27.html  report-cf8c45.html  report-cfe48e.html  report-f01dd5.html  report-f47330.html
2021-02-03-074232-8134-cppcheck@3f70c0ecafd4_master/: 10.html  12.html  3.html
2021-02-15-214801-3340-1@74ede8b3bcd7_master/: index.html  report-2e8966.html  report-3e66b4.html  report-445841.html  report-512ba7.html  report-8bca68.html  report-91d450.html  report-9336d5.html  report-9c2e6e.html  report-c1856b.html
2021-02-15-214917-0946-cppcheck@74ede8b3bcd7_master/: 9.html
2021-02-18-064120-3345-1@d40a7e81e635_master/: index.html  report-22cfae.html  report-333cb9.html  report-39d9b0.html  report-44714e.html  report-4baa6b.html  report-4f22e4.html  report-53621f.html  report-cb05bf.html  report-f41c66.html
2021-02-20-084940-3310-1@7f8d5ca3b510_history/: index.html  report-23c9dc.html  report-2ddba6.html  report-57ddd1.html  report-5b598b.html  report-6d1ca6.html  report-aa7a98.html  report-acc9eb.html  report-c7bc4b.html  report-fd4bdd.html
2021-02-20-085100-1652-cppcheck@7f8d5ca3b510_history/: 2.html  4.html  5.html  8.html  index.html  stats.html
2021-02-22-204821-3323-1@62083f9227eb_master/: index.html  report-385651.html  report-5af7a5.html  report-707536.html  report-70d62d.html  report-91ac22.html  report-a2c342.html  report-a3cad5.html  (+2 more)
data/: Makefile.am  buttons-advanced.ui  buttons-basic.ui  buttons-financial.ui  buttons-programming.ui  mate-calc-cmd.1  mate-calc.1  mate-calc.appdata.xml  mate-calc.appdata.xml.in  mate-calc.desktop.in  meson.build  org.mate.calc.gschema.xml  org.mate.calc.gschema.xml.in  org.mate.mate-calc.gschema.xml.in  preferences.ui
help/: LINGUAS  Makefile.am  create_linguas.sh  mate-calc.pot  meson.build
help/C/: complex.page  factorize.page  functions.page  index.page  keyboard.page  superscript.page
help/af/: af.po
help/am/: am.po
help/ar/: ar.po
help/as/: as.po
help/ast/: ast.po
help/az/: az.po
help/be/: be.po
help/bg/: bg.po
help/bn/: bn.po
help/bn_IN/: bn_IN.po
help/br/: br.po
help/bs/: bs.po
help/ca/: ca.po
help/ca@valencia/: ca@valencia.po
help/cmn/: cmn.po
help/crh/: crh.po
help/cs/: cs.po
help/cy/: cy.po
help/da/: da.po
help/de/: de.po
help/dz/: dz.po
help/el/: el.po
help/en_AU/: en_AU.po
help/en_CA/: en_CA.po
help/en_GB/: en_GB.po
help/eo/: eo.po
help/es/: es.po
help/es_AR/: es_AR.po
help/es_CO/: es_CO.po
help/es_MX/: es_MX.po
help/et/: et.po
help/eu/: eu.po
help/fa/: fa.po
help/fi/: fi.po
help/fr/: fr.po
help/frp/: frp.po
help/fur/: fur.po
help/ga/: ga.po
help/gl/: gl.po
help/gu/: gu.po
help/ha/: ha.po
help/he/: he.po
help/hi/: hi.po
help/hr/: hr.po
help/hu/: hu.po
help/hy/: hy.po
help/id/: id.po
help/ie/: ie.po
help/ig/: ig.po
help/is/: is.po
help/it/: it.po
help/ja/: ja.po
help/ka/: ka.po
help/kk/: kk.po
help/km/: km.po
help/kn/: kn.po
help/ko/: ko.po
help/ku/: ku.po
help/ku_IQ/: ku_IQ.po
help/ky/: ky.po
help/li/: li.po
help/lt/: lt.po
help/lv/: lv.po
help/mai/: mai.po
help/mg/: mg.po
help/mk/: mk.po
help/ml/: ml.po
help/mn/: mn.po
help/mr/: mr.po
help/ms/: ms.po
help/my/: my.po
help/nb/: nb.po
help/nds/: nds.po
help/ne/: ne.po
help/nl/: nl.po
help/nn/: nn.po
help/nso/: nso.po
help/oc/: oc.po
help/or/: or.po
help/pa/: pa.po
help/pl/: pl.po
help/pms/: pms.po
help/ps/: ps.po
help/pt/: pt.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/rw/: rw.po
help/si/: si.po
help/sk/: sk.po
help/sl/: sl.po
help/sq/: sq.po
help/sr/: sr.po
help/sr@latin/: sr@latin.po
help/sv/: sv.po
help/ta/: ta.po
help/te/: te.po
help/th/: th.po
help/tk/: tk.po
help/tr/: tr.po
help/ug/: ug.po
help/uk/: uk.po
help/ur/: ur.po
help/uz/: uz.po
help/vi/: vi.po
help/wa/: wa.po
help/xh/: xh.po
help/yo/: yo.po
help/zh_CN/: zh_CN.po
help/zh_HK/: zh_HK.po
help/zh_TW/: zh_TW.po
help/zu/: zu.po
po/: LINGUAS  POTFILES  POTFILES.in  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  es_AR.po  es_CL.po  es_CO.po  es_CR.po  es_DO.po  es_EC.po  es_ES.po  (+100 more)
src/: Makefile.am  buttons-advanced.ui  buttons-basic.ui  buttons-financial.ui  buttons-programming.ui  currency-manager.c  currency-manager.h  currency.c  currency.h  financial.c  financial.h  history-entry.ui  lexer.c  mate-calc-cmd.c  mate-calc.about  mate-calc.c  math-buttons.c  math-buttons.h  math-converter.c  math-display.c  math-display.h  math-equation.c  math-equation.h  math-history-entry-view.c  math-history-entry-view.h  math-history-entry.c  math-history-entry.h  math-history-view.c  math-history-view.h  math-history.c  math-history.h  math-preferences.c  math-preferences.h  math-variable-popup.c  math-variables.c  math-variables.h  math-window.c  math-window.h  menu.ui  meson.build  (+30 more)
(+358 files in other folders)
