langs = ['af','am','ar','as','ast','az','be','bg','bn','bn_IN','bs','ca','ca@valencia','cmn',
	'cs','cy','da','de','dz','el','en_AU','en_CA','en_GB','eo','es','es_AR','et','eu','fa',
	'fi','fr','ga','gl','gu','he','hi','hr','hu','hy','id','it','ja','ka','kk','km','kn','ko',
	'ku','ky','lt','lv','mai','mk','mg','mk','ml','mn','mr','ms','my','nb','ne','nl','nn','oc',
	'or','pa','pl','pt','pt_BR','ro','ru','rw','si','sk','sl','sq','sr','sr@latin','sv','ta',
	'te','th','tk','tr','ug','uk','vi','xh','zh_CN','zh_HK','zh_TW'
]

i18n.gettext('mate-calc', languages: langs)